syntax = "proto3";

package io.mystore.stock.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/mystore/shipping/entity/order_sku_item_entity.proto";
import "io/mystore/stock/entity/stock_sku_item_entity.proto";

service OrderSkuItemToStockSkuItem {
  option (kalix.codegen) = {
    action : {}
  };

  rpc OnOrderRequestedJoinToStock(shipping.entity.OrderRequestedJoinToStock)
      returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "order_sku_item"
    };
  }

  rpc OnOrderRequestedJoinToStockRejected(
      shipping.entity.OrderRequestedJoinToStockRejected)
      returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "order_sku_item"
    };
  }

  rpc OnStockRequestedJoinToOrderAccepted(
      shipping.entity.StockRequestedJoinToOrderAccepted)
      returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "order_sku_item"
    };
  }

  rpc OnStockRequestedJoinToOrderRejected(
      shipping.entity.StockRequestedJoinToOrderRejected)
      returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "order_sku_item"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "order_sku_item"
    };
  }
}
